--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manas Goel</title>
-    <link rel="shortcut icon" href="image/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="phone.css" media="screen and (max-width:1170px)">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -68,23 +68,23 @@
 
         <div class="slide-track">
           <div class="slide">
-            <img src="image/technology/git.png" height="100" alt="" />
+            <img src="git.png" height="100" alt="" />
           </div>
           <div class="slide">
-             <img src="image/technology/cpp.png" height="100" alt="" />
+             <img src="cpp.png" height="100" alt="" />
            </div>
           <div class="slide">
-            <img src="image/technology/python.png" height="100" alt="" />
+            <img src="python.png" height="100" alt="" />
           </div>
 
           <div class="slide">
-            <img src="image/technology/html.png" height="100" alt="" />
+            <img src="html.png" height="100" alt="" />
           </div>
           <div class="slide">
-            <img src="image/technology/css.png" height="100" alt="" />
+            <img src="css.png" height="100" alt="" />
           </div>
           <div class="slide">
-            <img src="image/technology/java.jpg" height="100" alt="" />
+            <img src="java.jpg" height="100" alt="" />
           </div>
 
         </div>
@@ -98,7 +98,7 @@
     <!--taxila -->
     <div id="work">
       <div class="box">
-        <img src="image/void.jpg" alt="">
+        <img src="void.jpg" alt="">
         <h3 class="h-secondary ">VOID,SOMERVILLE NOIDA</h3>
         <p class="center">
         <ul>
